--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,19 @@
         android:theme="@style/Theme.MobileTaskMgr"
         tools:targetApi="31">
         <activity
+            android:name=".SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SplashScreenActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MobileTaskMgr" />
+        <activity
             android:name=".UpdateTaskActivity"
             android:exported="false" />
         <activity
